# python_hw_number_16

./: .gitignore  README.md  pyproject.toml
